tests/invalid/precedence_duplicate_over_escape.nano
..
    name first
    name second
    escaped "bad\q"
